k8s/apps/konomitv/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      annotations:
        fluentbit.io/exclude: "true"
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/tsukumijima/konomitv:latest@sha256:06e59ddb891b5b38095301c2fc40b0c023a452fd8e3b32313a408cc4db41e1d2
          # XXX: これが必要かは不明。digest が付いているとき IfNotPresent が設定されるはずだが、定期的に ErrImagePull が発生するため指定している
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /code/config.yaml
              readOnly: true
              subPath: config.yaml
            - name: data
              mountPath: /code/server/data
            - name: records
              mountPath: /mnt/records
          resources:
            limits:
              gpu.intel.com/i915: "1"
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: config
          configMap:
            name: app-config
        - name: data
          hostPath:
            path: /opt/k8s-volumes/konomitv/data
            type: DirectoryOrCreate
        - name: records
          hostPath:
            path: /mnt/records
            type: Directory
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
